<resources>
    <string name="app_name">Bangkit Capstone App</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="search">Search</string>
    <string name="onFailure">Check your internet connection and try again later</string>
    <string name="choosePicture">Choose a Picture</string>
    <string name="chooseImage">Please take picture or choose from gallery</string>
    <string name="permission">Application did not have permission</string>
    <string name="guideTitle">Guide</string>
    <string name="guide">Press the camera logo to search for mushrooms by image. If you want to search for mushrooms by name, use the search field above.</string>
    <string name="result">Result</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="preview">Preview</string>
</resources>